<?xml version="1.0"?>
<package format="2">
  <name>a1_description</name>
  <version>1.0.0</version>
  <description>The a1_description package</description>

  <maintainer email="didik@student.undip.ac.id">Didik</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>
